--- a/PickAndDisplayImage/Base.lproj/Main.storyboard
+++ b/PickAndDisplayImage/Base.lproj/Main.storyboard
@@ -36,13 +36,31 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kpc-40-Yon" userLabel="Image Picker View">
                                 <rect key="frame" x="0.0" y="20" width="375" height="603"/>
                             </imageView>
+                            <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="10b-jh-Q4h" userLabel="Bottom Text Field">
+                                <rect key="frame" x="28" y="563" width="318" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bpV-8A-HkR">
+                                <rect key="frame" x="28" y="46" width="318" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="bpV-8A-HkR" firstAttribute="trailing" secondItem="10b-jh-Q4h" secondAttribute="trailing" id="8Sn-1U-Of2"/>
                             <constraint firstItem="b2b-2m-DAQ" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="9Bu-jn-PR8"/>
                             <constraint firstItem="b2b-2m-DAQ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="CeQ-rO-MdK"/>
+                            <constraint firstItem="bpV-8A-HkR" firstAttribute="centerX" secondItem="kpc-40-Yon" secondAttribute="centerX" id="CyX-1K-Av5"/>
+                            <constraint firstItem="bpV-8A-HkR" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="28" id="MOm-He-YOb"/>
+                            <constraint firstItem="b2b-2m-DAQ" firstAttribute="top" secondItem="10b-jh-Q4h" secondAttribute="bottom" constant="30" id="OiE-Dd-jr1"/>
                             <constraint firstItem="kpc-40-Yon" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Vpi-vr-S7L"/>
+                            <constraint firstItem="bpV-8A-HkR" firstAttribute="leading" secondItem="10b-jh-Q4h" secondAttribute="leading" id="Yxp-BD-qye"/>
                             <constraint firstItem="b2b-2m-DAQ" firstAttribute="top" secondItem="kpc-40-Yon" secondAttribute="bottom" id="eq2-Qh-n2X"/>
+                            <constraint firstItem="bpV-8A-HkR" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="26" id="gnH-6y-2e6"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="kpc-40-Yon" secondAttribute="trailing" id="iHr-lH-WJh"/>
                             <constraint firstItem="b2b-2m-DAQ" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="mkM-I8-xv5"/>
                             <constraint firstItem="kpc-40-Yon" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="pBV-Fo-Hip"/>
@@ -50,12 +68,15 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="bottomTextField" destination="10b-jh-Q4h" id="ZPg-br-zTD"/>
                         <outlet property="cameraButton" destination="EGZ-ws-keq" id="7xG-bQ-moj"/>
                         <outlet property="imagePickerView" destination="kpc-40-Yon" id="LE5-PL-eoN"/>
+                        <outlet property="topTextField" destination="bpV-8A-HkR" id="PcU-fN-wBS"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="53.600000000000001" y="26.53673163418291"/>
         </scene>
     </scenes>
 </document>
