--- a/MemeMe/Base.lproj/Main.storyboard
+++ b/MemeMe/Base.lproj/Main.storyboard
@@ -67,12 +67,17 @@
                                     <rect key="frame" x="0.0" y="0.0" width="167" height="170"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VFr-wT-zzT">
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="VFr-wT-zzT">
                                             <rect key="frame" x="0.0" y="0.0" width="167" height="170"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         </imageView>
                                     </subviews>
                                 </view>
+                                <constraints>
+                                    <constraint firstItem="VFr-wT-zzT" firstAttribute="top" secondItem="fpK-LP-YiY" secondAttribute="top" id="a59-DX-xeb"/>
+                                    <constraint firstAttribute="bottom" secondItem="VFr-wT-zzT" secondAttribute="bottom" id="iq8-Oj-yub"/>
+                                    <constraint firstItem="VFr-wT-zzT" firstAttribute="leading" secondItem="fpK-LP-YiY" secondAttribute="leading" id="kFH-i3-iOr"/>
+                                    <constraint firstAttribute="trailing" secondItem="VFr-wT-zzT" secondAttribute="trailing" id="p0v-Wr-apN"/>
+                                </constraints>
                                 <connections>
                                     <outlet property="memeImage" destination="VFr-wT-zzT" id="sAF-tf-Pfm"/>
                                 </connections>
@@ -117,7 +122,7 @@
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bpV-8A-HkR">
                                 <rect key="frame" x="23" y="94" width="329" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="1fW-0z-N2z"/>
+                                    <constraint firstAttribute="height" constant="30" id="bmG-Hb-bBn"/>
                                 </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -126,7 +131,7 @@
                             <textField opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="10b-jh-Q4h" userLabel="Bottom Text Field">
                                 <rect key="frame" x="28" y="563" width="319" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="Z9k-KM-sYM"/>
+                                    <constraint firstAttribute="height" constant="30" id="K38-Qp-obT"/>
                                 </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -152,7 +157,7 @@
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TTQ-tm-Nqf">
                                 <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                             </navigationBar>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3zF-MI-pFP" userLabel="Share Button" customClass="UIBarButtonIcon">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3zF-MI-pFP" userLabel="Share Button">
                                 <rect key="frame" x="17" y="27" width="40" height="30"/>
                                 <state key="normal" title="Share"/>
                                 <connections>
@@ -169,27 +174,26 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="TTQ-tm-Nqf" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="337-Sn-XUt"/>
-                            <constraint firstItem="kpc-40-Yon" firstAttribute="trailing" secondItem="TTQ-tm-Nqf" secondAttribute="trailing" id="6ly-qq-oZX"/>
-                            <constraint firstAttribute="trailing" secondItem="TTQ-tm-Nqf" secondAttribute="trailing" id="85y-cv-pby"/>
-                            <constraint firstItem="b2b-2m-DAQ" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="9ds-WK-JbE"/>
-                            <constraint firstItem="bpV-8A-HkR" firstAttribute="top" secondItem="TTQ-tm-Nqf" secondAttribute="bottom" constant="30" id="Hdg-Gb-w52"/>
-                            <constraint firstItem="j7u-Ot-Hff" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="MZC-nv-fLW"/>
-                            <constraint firstItem="kpc-40-Yon" firstAttribute="top" secondItem="TTQ-tm-Nqf" secondAttribute="bottom" id="QTh-hN-toV"/>
-                            <constraint firstItem="kpc-40-Yon" firstAttribute="trailing" secondItem="b2b-2m-DAQ" secondAttribute="trailing" id="RLF-dn-f5c"/>
-                            <constraint firstItem="kpc-40-Yon" firstAttribute="bottom" secondItem="b2b-2m-DAQ" secondAttribute="top" id="UA8-e8-Ctf"/>
-                            <constraint firstItem="3zF-MI-pFP" firstAttribute="leading" secondItem="bpV-8A-HkR" secondAttribute="leading" constant="-6" id="Ui3-XB-srt"/>
-                            <constraint firstItem="3zF-MI-pFP" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="V9Q-9d-hO0"/>
-                            <constraint firstItem="10b-jh-Q4h" firstAttribute="centerX" secondItem="b2b-2m-DAQ" secondAttribute="centerX" id="Zgf-3W-TZP"/>
-                            <constraint firstItem="kpc-40-Yon" firstAttribute="leading" secondItem="TTQ-tm-Nqf" secondAttribute="leading" id="h2e-aW-d7z"/>
-                            <constraint firstItem="TTQ-tm-Nqf" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="nF3-qa-c0q"/>
-                            <constraint firstItem="bpV-8A-HkR" firstAttribute="trailing" secondItem="10b-jh-Q4h" secondAttribute="trailing" constant="5" id="nZ8-55-tQI"/>
-                            <constraint firstItem="kpc-40-Yon" firstAttribute="centerX" secondItem="bpV-8A-HkR" secondAttribute="centerX" id="oEa-Fp-lno"/>
-                            <constraint firstItem="b2b-2m-DAQ" firstAttribute="top" secondItem="10b-jh-Q4h" secondAttribute="bottom" constant="30" id="rIp-bd-tJa"/>
-                            <constraint firstItem="3zF-MI-pFP" firstAttribute="baseline" secondItem="j7u-Ot-Hff" secondAttribute="baseline" id="rrV-GA-kR4"/>
-                            <constraint firstItem="TTQ-tm-Nqf" firstAttribute="centerY" secondItem="j7u-Ot-Hff" secondAttribute="centerY" id="v1x-QZ-3Ah"/>
-                            <constraint firstItem="10b-jh-Q4h" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="28" id="zjn-6P-cUS"/>
-                            <constraint firstItem="kpc-40-Yon" firstAttribute="leading" secondItem="b2b-2m-DAQ" secondAttribute="leading" id="zvw-At-heF"/>
+                            <constraint firstItem="TTQ-tm-Nqf" firstAttribute="leading" secondItem="kpc-40-Yon" secondAttribute="leading" id="6uD-Yd-WHz"/>
+                            <constraint firstItem="10b-jh-Q4h" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="28" id="Au5-ch-PLd"/>
+                            <constraint firstItem="10b-jh-Q4h" firstAttribute="centerX" secondItem="b2b-2m-DAQ" secondAttribute="centerX" id="BRL-XG-FgT"/>
+                            <constraint firstItem="kpc-40-Yon" firstAttribute="leading" secondItem="b2b-2m-DAQ" secondAttribute="leading" id="Bk9-35-MNU"/>
+                            <constraint firstItem="TTQ-tm-Nqf" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="BvR-ai-Wgj"/>
+                            <constraint firstItem="bpV-8A-HkR" firstAttribute="top" secondItem="TTQ-tm-Nqf" secondAttribute="bottom" constant="30" id="DLw-ao-N9o"/>
+                            <constraint firstItem="TTQ-tm-Nqf" firstAttribute="centerX" secondItem="bpV-8A-HkR" secondAttribute="centerX" id="G7M-cP-Nov"/>
+                            <constraint firstItem="3zF-MI-pFP" firstAttribute="baseline" secondItem="j7u-Ot-Hff" secondAttribute="baseline" id="J5R-TF-6xz"/>
+                            <constraint firstItem="kpc-40-Yon" firstAttribute="trailing" secondItem="b2b-2m-DAQ" secondAttribute="trailing" id="JCF-2o-tmU"/>
+                            <constraint firstItem="TTQ-tm-Nqf" firstAttribute="centerY" secondItem="j7u-Ot-Hff" secondAttribute="centerY" id="OG5-Tn-R8b"/>
+                            <constraint firstItem="b2b-2m-DAQ" firstAttribute="top" secondItem="10b-jh-Q4h" secondAttribute="bottom" constant="30" id="P6m-nn-3J8"/>
+                            <constraint firstItem="TTQ-tm-Nqf" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Pnc-b0-fVF"/>
+                            <constraint firstItem="j7u-Ot-Hff" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="YRK-1d-PgL"/>
+                            <constraint firstItem="b2b-2m-DAQ" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="e85-tE-UKb"/>
+                            <constraint firstItem="3zF-MI-pFP" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="17" id="ibl-iL-OSp"/>
+                            <constraint firstAttribute="trailing" secondItem="TTQ-tm-Nqf" secondAttribute="trailing" id="jC9-kU-teo"/>
+                            <constraint firstItem="TTQ-tm-Nqf" firstAttribute="trailing" secondItem="kpc-40-Yon" secondAttribute="trailing" id="mFL-pG-yqH"/>
+                            <constraint firstItem="b2b-2m-DAQ" firstAttribute="top" secondItem="kpc-40-Yon" secondAttribute="bottom" id="rOB-e3-CBO"/>
+                            <constraint firstItem="kpc-40-Yon" firstAttribute="top" secondItem="TTQ-tm-Nqf" secondAttribute="bottom" id="rWh-ag-sWp"/>
+                            <constraint firstItem="bpV-8A-HkR" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="23" id="yoc-zz-aG2"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -257,23 +261,35 @@
         <!--Detail View Controller-->
         <scene sceneID="PYL-W0-8xr">
             <objects>
-                <viewController id="eTN-HW-VMe" userLabel="Detail View Controller" customClass="MemeDetailViewController" customModule="MemeMe" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MemeDetailViewController" id="eTN-HW-VMe" userLabel="Detail View Controller" customClass="MemeDetailViewController" customModule="MemeMe" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="e4N-Zj-Zae">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BZI-Nz-MpX" userLabel="Detail Image View">
-                                <rect key="frame" x="67" y="269" width="240" height="128"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BZI-Nz-MpX" userLabel="Detail Image View">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZWr-eD-Lyz" userLabel="Detail Image View">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="BZI-Nz-MpX" firstAttribute="leading" secondItem="Gyk-km-AjH" secondAttribute="leading" id="AwF-0k-VHQ"/>
+                            <constraint firstItem="BZI-Nz-MpX" firstAttribute="trailing" secondItem="Gyk-km-AjH" secondAttribute="trailing" id="Tay-3s-bEm"/>
+                            <constraint firstItem="BZI-Nz-MpX" firstAttribute="bottom" secondItem="Gyk-km-AjH" secondAttribute="bottom" id="aQm-v0-3GC"/>
+                            <constraint firstItem="BZI-Nz-MpX" firstAttribute="top" secondItem="Gyk-km-AjH" secondAttribute="top" id="lhj-N1-0tB"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Gyk-km-AjH"/>
                     </view>
+                    <connections>
+                        <outlet property="memedImage" destination="ZWr-eD-Lyz" id="Kig-zz-mNq"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WHJ-Y3-tMc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="839" y="-317"/>
+            <point key="canvasLocation" x="837.60000000000002" y="-317.09145427286359"/>
         </scene>
         <!--Table View-->
         <scene sceneID="9QV-mu-gh6">
